--- a/src/app/components/wizard/wizard.component.html
+++ b/src/app/components/wizard/wizard.component.html
@@ -1,3 +1,30 @@
 <h1>Bestellprozess</h1>
 
 <p>wizard to be implemented in task 1</p>
+
+<div class="wizard-container">
+  <div class="flex flex-column bg-gray-100 p-5">
+    @switch (currentWizardStep) {
+      @case (wizardStep.TicketHolderForm) {
+        <app-ticket-holder-form
+          [formValue]="ticketHolder"
+          (nextStep)="setCurrentWizardStep(wizardStep.BillHolderForm)"
+          (formChange)="setTicketHolder($event)"></app-ticket-holder-form>
+      }
+      @case (wizardStep.BillHolderForm) {
+        <app-bill-holder-form
+          [formValue]="billHolder"
+          (formChange)="setBillHolder($event)"
+          (stepBack)="setCurrentWizardStep(wizardStep.TicketHolderForm)"
+          (nextStep)="setCurrentWizardStep(wizardStep.OrderSummary)"></app-bill-holder-form>
+      }
+      @case (wizardStep.OrderSummary) {
+        <app-order-summary
+          [ticketHolder]="ticketHolder"
+          [billHolder]="billHolder"
+          (stepBack)="setCurrentWizardStep(wizardStep.BillHolderForm)"
+          (submitWizard)="submitWizard()"></app-order-summary>
+      }
+    }
+  </div>
+</div>
