--- a/src/app/components/wizard/ticket-holder-form/ticket-holder-form.component.html
+++ b/src/app/components/wizard/ticket-holder-form/ticket-holder-form.component.html
@@ -18,7 +18,15 @@
            class="w-full"
            pInputText>
   </div>
-  <div class="flex justify-content-end w-full">
+  <div class="col-12">
+    <div class="flex align-items-center gap-1">
+      <p-checkbox inputId="adoptForBill"
+                  formControlName="adoptForBill"
+                  [binary]="true"></p-checkbox>
+      <label for="adoptForBill" class="w-full">Ticketinhaber für Rechnungsinhaber übernehmen</label>
+    </div>
+  </div>
+  <div class="flex justify-content-end w-full mt-5">
     <p-button type="submit"
               class="w-full md:w-auto"
               styleClass="w-full"
